force-app/main/default/objects/Event_Staging_Record__c/Event_Staging_Record__c.object-meta.xml
<CustomObject>
    <label>Event Staging Record</label>
    <nameField>
        <displayFormat>Evt-{00000000}</displayFormat>
        <label>Event Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Staging Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>