force-app/main/default/objects/Event_Staging_Record__c/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <description>The correlation id for this event.</description>
    <externalId>true</externalId>
    <label>Correlation Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>