force-app/main/default/objects/Event_Staging_Record__c/fields/Dependency_Id__c.field-meta.xml
<CustomField>
    <fullName>Dependency_Id__c</fullName>
    <description>A unique identifier in the &quot;Master ID&quot; field of the event(s) that the current event is dependent on.</description>
    <externalId>true</externalId>
    <label>Dependency Master Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>