force-app/main/default/objects/Event_Staging_Record__c/fields/Dependency_Type__c.field-meta.xml
<CustomField>
    <fullName>Dependency_Type__c</fullName>
    <description>The event type of the event(s) that the current event is dependent on.</description>
    <label>Dependency Event Type</label>
    <length>64</length>
    <type>Text</type>
</CustomField>