force-app/main/default/objects/Event_Staging_Record__c/fields/Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Id__c</fullName>
    <description>The identifier of the notification.</description>
    <externalId>true</externalId>
    <label>Event Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>