force-app/main/default/objects/Event_Staging_Record__c/fields/Event_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Time__c</fullName>
    <description>Time of the event occurrence.</description>
    <label>Event Time</label>
    <type>DateTime</type>
</CustomField>