force-app/main/default/objects/Event_Staging_Record__c/fields/Master_Id__c.field-meta.xml
<CustomField>
    <fullName>Master_Id__c</fullName>
    <description>The unique identifier of the record within the event payload.</description>
    <externalId>true</externalId>
    <label>Master Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>