force-app/main/default/objects/Event_Staging_Record__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>The data or payload of the notification. It&apos;s in JSON format by default.</description>
    <label>Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>