force-app/main/default/objects/Event_Staging_Record__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The processing status of the event.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Retry</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Ignored</fullName>
            </value>
            <value>
                <fullName>Queued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>