force-app/main/default/objects/Event_Staging_Record__c/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName>
    <description>The status code returned from the event process refers to the HTTP StatusCode.</description>
    <label>Status Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>