force-app/main/default/objects/Event_Staging_Record__c/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <description>The tag(s) associated with a given event, which can be used for querying.</description>
    <externalId>true</externalId>
    <label>Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>